# Autofuzz

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  TASKS.md  autofuzz.py  pyproject.toml  readme.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docker/: Dockerfile  docker-compose.yml
docker/labs/ftp-vsftpd/: Dockerfile  vsftpd.conf
docs/: architecture.md  developer-guide.md  ethics.md  user-guide.md
examples/ci/: scheduled-web-scan.yml
examples/configs/: ftp-lab-compose.yaml  ftp-lab.yaml  web-default.yaml  web-thorough.yaml
scripts/: benchmark.py
src/autofuzz/: __init__.py  __main__.py
src/autofuzz/cli/: __init__.py  app.py  ui.py
src/autofuzz/core/: __init__.py  config.py  errors.py  logging.py  plugin.py  scan.py  scheduler.py  target_controller.py
src/autofuzz/plugins/: __init__.py  base.py
src/autofuzz/protocol_fuzzing/: __init__.py  crash_classifier.py  engine.py  fsm.py
src/autofuzz/reporting/: __init__.py  models.py
src/autofuzz/utils/: __init__.py
src/autofuzz/web/: __init__.py  crawler.py  engine.py  (+1 more)
tests/integration/: conftest.py  test_protocol_engine.py  test_web_assessment_engine.py  test_web_engine.py
tests/unit/: test_cli.py  test_config.py  test_crash_classifier.py  test_crawler.py  test_endpoints.py  test_engine.py  test_fingerprint.py  test_fsm.py  test_graph.py  test_http_client.py  test_logging.py  test_mutators.py  test_params.py  test_plugin_base.py  test_plugin_registry.py  test_report_renderers.py  test_reporting_models.py  test_robots.py  test_scan.py  test_scheduler.py  test_sitemap.py  test_target_controller.py  test_web_headers_plugins.py
(+20 files in other folders)
