[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofuzz"
version = "2.0.0.dev0"
description = "Modular framework for authorized protocol fuzzing and web application security assessment"
readme = "readme.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Samuel James" },
    { name = "Annup Kumar" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "structlog>=24.1",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "coverage>=7.4",
    "types-pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/samuel7james/Autofuzz"

[project.scripts]
autofuzz = "autofuzz.cli.app:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/autofuzz"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
explicit_package_bases = true
packages = ["autofuzz.core", "autofuzz.cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/autofuzz"]
